Created a new style sheet for jupyter notebooks in iframe

--- a/blog/jupyter/ipynb/2023-11-18/2023-11-18.ipynb
+++ b/blog/jupyter/ipynb/2023-11-18/2023-11-18.ipynb
@@ -4,14 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\newcommand{\\pa}[1]{\\left(#1\\right)}$\n",
-    "$\\newcommand{\\br}[1]{\\left[#1\\right]}$\n",
-    "$\\newcommand{\\cbr}[1]{\\left\\{#1\\right\\}}$\n",
-    "$\\newcommand{\\abs}[1]{\\left|#1\\right|}$\n",
     "## 1. A Quick Introduction to the Lorenz Equations\n",
     "\n",
     "_**Chaos** is aperiodic long-term behavior in a deterministic system that exhibits sensitive dependence on initial conditions._\n",
-    "\n",
+    "$\\newcommand{\\pa}[1]{\\left(#1\\right)}$ $\\newcommand{\\br}[1]{\\left[#1\\right]}$\n",
     "\n",
     "Any study of chaos begins with the **Lorenz equations**:\n",
     "\n",
@@ -64,7 +60,7 @@
     "with $\\tau = -\\pa{\\sigma + 1} < 0$ and $\\Delta = \\sigma\\pa{1-r}$. If $r>1$, $\\Delta < 0$ $\\Rightarrow$ the origin is a saddle point. If $r<1$, the origin is a sink. Note that $\\tau^2 - 4\\Delta = \\pa{\\sigma +1}^2 - 4\\sigma\\pa{1-r} = \\pa{\\sigma - 1}^2 + 4\\sigma r > 0$, so the origin is a stable node for $r<1$.\n",
     "\n",
     "#### 2.2.2 Global\n",
-    "To show that the origin is globally stable, we construct a [**Lyapunov function**](https://en.wikipedia.org/wiki/Lyapunov_function). Consider $V: \\mathbb{R}^3\\to\\mathbb{R}$, defined by\n",
+    "To show that the origin is globally stable, we construct a **Lyapunov function**. Consider $V: \\mathbb{R}^3\\to\\mathbb{R}$, defined by\n",
     "\n",
     "$$V\\pa{x, y, z} \\equiv \\frac{1}{\\sigma}x^2+y^2+z^2.$$\n",
     "\n",
@@ -134,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +161,6 @@
     "t = np.linspace(0, 100, steps)\n",
     "\n",
     "X0 = [0.0, 1.0, 1.05]\n",
-    "X1 = [0.0, 1.0, 1.0]\n",
     "\n",
     "# Compute the fixed points\n",
     "x_fixed = [0, np.sqrt(b * (r - 1)), -np.sqrt(b * (r - 1))]\n",
@@ -182,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,23 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "solution0 = odeint(lorenz, X0, t, args=(sigma, r, b))\n",
     "\n",
     "# Extracting components from the solution\n",
-    "x0 = solution0[:, 0]\n",
-    "y0 = solution0[:, 1]\n",
-    "z0 = solution0[:, 2]\n",
-    "\n",
-    "solution1 = odeint(lorenz, X1, t, args=(sigma, r, b))\n",
-    "\n",
-    "# Extracting components from the solution\n",
-    "x1 = solution1[:, 0]\n",
-    "y1 = solution1[:, 1]\n",
-    "z1 = solution1[:, 2]"
+    "x = solution0[:, 0]\n",
+    "y = solution0[:, 1]\n",
+    "z = solution0[:, 2]"
    ]
   },
   {
@@ -243,13 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import style                                # Custom styling for figures\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "import style                        # Custom styling for figures\n",
     "\n",
-    "import plotly.graph_objects as go           # To create the animations\n",
+    "import plotly.graph_objects as go   # To create the animations\n",
     "import plotly.io as pio\n",
     "pio.templates[\"custom_template\"] = style.template\n",
     "pio.templates.default = \"custom_template\""
@@ -264,12 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "camera = dict(\n",
-    "    eye=dict(x=1, y=-1, z=0.2)\n",
+    "    eye=dict(x=1.5, y=-1.5, z=0.15)\n",
     ")"
    ]
   },
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -30315,9 +30305,9 @@
          "mode": "markers",
          "name": "Fixed Points",
          "text": [
-          "Origin",
-          "Fixed Point 1",
-          "Fixed Point 2"
+          "Origin: (0, 0, 0)",
+          "C+: (8.5, 8.5, 27)",
+          "C-: (-8.5, -8.5, 27)"
          ],
          "type": "scatter3d",
          "x": [
@@ -30338,12 +30328,13 @@
         }
        ],
        "layout": {
+        "height": 500,
         "scene": {
          "camera": {
           "eye": {
-           "x": 1,
-           "y": -1,
-           "z": 0.2
+           "x": 1.5,
+           "y": -1.5,
+           "z": 0.15
           }
          },
          "xaxis": {
@@ -30414,28 +30405,41 @@
    ],
    "source": [
     "# Define labels for fixed points\n",
-    "labels_fixed = ['Origin', 'Fixed Point 1', 'Fixed Point 2']\n",
+    "labels_fixed = [\n",
+    "    f'Origin: ({x_fixed[0]}, {y_fixed[0]}, {z_fixed[0]})',\n",
+    "    f'C+: ({x_fixed[1]:.2g}, {y_fixed[1]:.2g}, {z_fixed[1]})',\n",
+    "    f'C-: ({x_fixed[2]:.2g}, {y_fixed[2]:.2g}, {z_fixed[2]})']\n",
     "\n",
     "fig = go.Figure(data=[\n",
     "    # Plotting the trajectory\n",
     "    go.Scatter3d(\n",
-    "        x=x0, y=y0, z=z0, mode='lines', line=dict(width=0.5), name='Trajectory'\n",
+    "        x=x, y=y, z=z,\n",
+    "        mode='lines',\n",
+    "        line=dict(width=0.5),\n",
+    "        name='Trajectory'\n",
     "    ),\n",
     "    # Plotting the fixed points\n",
     "    go.Scatter3d(\n",
-    "        x=x_fixed, y=y_fixed, z=z_fixed, mode='markers', marker=dict(size=5, color=\"#9FFFCB\"),\n",
-    "        text=labels_fixed, hoverinfo='text', name='Fixed Points'\n",
+    "        x=x_fixed, y=y_fixed, z=z_fixed,\n",
+    "        mode='markers',\n",
+    "        marker=dict(size=5, color=\"#9FFFCB\"),\n",
+    "        text=labels_fixed,\n",
+    "        hoverinfo='text',\n",
+    "        name='Fixed Points'\n",
     "    )\n",
     "])\n",
     "\n",
     "fig.update_layout(\n",
-    "    title=f\"Lorenz Attractor for sigma = {sigma}, r = {r}, and b = {b:.2g}\",\n",
+    "    title=f\"Lorenz Attractor for sigma = {sigma}, \\\n",
+    "r = {r}, and b = {b:.2g}\",\n",
     "    scene=dict(\n",
     "    xaxis_title='x axis',\n",
     "    yaxis_title='y axis',\n",
     "    zaxis_title='z axis',\n",
     "    camera=camera\n",
-    "))\n",
+    "    ),\n",
+    "    height=500\n",
+    ")\n",
     "\n",
     "fig.show()  # To print the figure in the notebook"
    ]
