Updated jupyter.css and initiated images.html
The styling changed on jupyter notebook converion to html, so I had to update my styling.
I also added an 'images.html' file to the main navigation.
I've uploaded the images and updated blog.css to accomodate for the new file.
I anticipate issues in page loading time since I've got all images on one page, so I will look into how to take care of that.

--- a/blog/jupyter/ipynb/2023-11-18/2023-11-18.ipynb
+++ b/blog/jupyter/ipynb/2023-11-18/2023-11-18.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## 2. Simple Properties of the Lorenz Equations\n",
     "### 2.1 Fixed Points\n",
-    "Simply from glancing at the equations in sytem (1) we see the following fixed point: $\\pa{x^\\ast, y^\\ast, z^\\ast} = \\pa{0,0,0}$, which holds $\\forall\\,\\sigma, r, b$. For $r>1$, another fixed point can be quickly discovered:\n",
+    "Simply from glancing at the equations in system (1) we see the following fixed point: $\\pa{x^\\ast, y^\\ast, z^\\ast} = \\pa{0,0,0}$, which holds $\\forall\\,\\sigma, r, b$. For $r>1$, another fixed point can be quickly discovered:\n",
     "\n",
     "\\begin{gather*}\n",
     "    0 = \\sigma\\pa{y-x} \\Rightarrow y^\\ast = x^\\ast; \\\\\n",
@@ -90,8 +90,6 @@
     "\\begin{align*}\n",
     "    0 &= \\text{det}\\pa{J-\\lambda I_3} \\\\\n",
     "    &= \\text{det}\\begin{pmatrix} -\\sigma-\\lambda & \\sigma & 0 \\\\ 1 & -1-\\lambda & \\mp\\sqrt{b\\pa{r-1}} \\\\ \\pm\\sqrt{b\\pa{r-1}} & \\pm\\sqrt{b\\pa{r-1}} & -b-\\lambda \\end{pmatrix} \\\\\n",
-    "    &= \\pa{-\\sigma-\\lambda}\\br{\\pa{-1-\\lambda}\\pa{-b-\\lambda} - \\pa{\\mp\\sqrt{b\\pa{r-1}}}\\pa{\\pm\\sqrt{b\\pa{r-1}}}} - \\sigma\\br{\\pa{1}\\pa{-b-\\lambda} - \\pa{\\mp\\sqrt{b\\pa{r-1}}}\\pa{\\pm\\sqrt{b\\pa{r-1}}}} \\\\\n",
-    "    &= -\\sigma\\lambda - b\\sigma\\lambda - \\sigma\\lambda^2 - br\\sigma - \\lambda^2 - b\\lambda^2 - \\lambda^3 - br\\lambda - br\\sigma + 2b\\sigma + \\sigma\\lambda \\\\\n",
     "    &= \\lambda^3 + \\pa{\\sigma + 1 + b}\\lambda^2 + b\\pa{\\sigma + r}\\lambda + 2b\\sigma\\pa{r - 1},\n",
     "\\end{align*}\n",
     "\n",
@@ -130,12 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np                          # For math operations and variable storing\n",
-    "from scipy.integrate import odeint          # To solve the differential equations"
+    "# For math operations and variable storing\n",
+    "import numpy as np\n",
+    "\n",
+    "# To solve the differential equations\n",
+    "from scipy.integrate import odeint"
    ]
   },
   {
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lorenz(X, t, sigma, r, b):\n",
     "    x, y, z = X\n",
     "\n",
-    "    dxdt = sigma * (y - x)  # First Lorenz equation\n",
-    "    dydt = x * (r - z) - y  # Second Lorenz equation\n",
-    "    dzdt = x * y - b * z    # Third Lorenz equation\n",
+    "    # Lorenz equations\n",
+    "    dxdt = sigma * (y - x)\n",
+    "    dydt = x * (r - z) - y\n",
+    "    dzdt = x * y - b * z\n",
     "    \n",
     "    return [dxdt, dydt, dzdt]"
    ]
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +220,7 @@
    "metadata": {},
    "source": [
     "### 3.3 Plotting\n",
-    "In this section we plot some amazing figures. Note that most of the code is commented out to decrease the size of this file."
+    "In this section we plot the Lorenz attractor for our parameters. Additional plots can be found in my github."
    ]
   },
   {
@@ -231,15 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Custom styling for figures\n",
     "import sys\n",
     "sys.path.append('../')\n",
-    "import style                        # Custom styling for figures\n",
+    "import style\n",
     "\n",
-    "import plotly.graph_objects as go   # To create the animations\n",
+    "# To create the animations\n",
+    "import plotly.graph_objects as go\n",
     "import plotly.io as pio\n",
     "pio.templates[\"custom_template\"] = style.template\n",
     "pio.templates.default = \"custom_template\""
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -30328,7 +30332,14 @@
         }
        ],
        "layout": {
-        "height": 500,
+        "height": 700,
+        "legend": {
+         "orientation": "h",
+         "x": 0.5,
+         "xanchor": "center",
+         "y": -0.3,
+         "yanchor": "bottom"
+        },
         "scene": {
          "camera": {
           "eye": {
@@ -30394,7 +30405,9 @@
          }
         },
         "title": {
-         "text": "Lorenz Attractor for sigma = 10, r = 28, and b = 2.7"
+         "text": "Lorenz Attractor for sigma = 10, r = 28, and b = 2.7",
+         "x": 0.5,
+         "xanchor": "center"
         }
        }
       }
@@ -30430,15 +30443,26 @@
     "])\n",
     "\n",
     "fig.update_layout(\n",
-    "    title=f\"Lorenz Attractor for sigma = {sigma}, \\\n",
+    "    title=dict(\n",
+    "        text=f\"Lorenz Attractor for sigma = {sigma}, \\\n",
     "r = {r}, and b = {b:.2g}\",\n",
+    "        x=0.5,\n",
+    "        xanchor='center'\n",
+    "    ),\n",
     "    scene=dict(\n",
     "    xaxis_title='x axis',\n",
     "    yaxis_title='y axis',\n",
     "    zaxis_title='z axis',\n",
     "    camera=camera\n",
     "    ),\n",
-    "    height=500\n",
+    "    legend=dict(\n",
+    "        orientation='h',\n",
+    "        yanchor='bottom',\n",
+    "        y=-0.3,\n",
+    "        xanchor='center',\n",
+    "        x=0.5\n",
+    "    ),\n",
+    "    height=700\n",
     ")\n",
     "\n",
     "fig.show()  # To print the figure in the notebook"
